# spymaster

./: .env.replay  .gitignore  .gitmodules  AGENTS.md  ANALYSIS.md  APP.md  CLAUDE.md  COMPARISON_ANALYSIS.md  COMPONENTS.md  CRITICAL_UNIT_BUGS.md  DEV.md  DOCS_FRONTEND.md  ENG_AMENDED.md  ENTERPRISE.md  EVALUATE.md  EXAMPLE.py  EXPERIMENT.md  FEATURES.md  FEATURES_TASK.md  FEATURE_ANALYSIS_ABLATION.md  FEATURE_BY_FEATURE.md  FEATURE_SPEC.md  FRONTEND.md  GEMINI.MD  GEMINI.md  GRUNT_LOG.md  IMPLEMENT.md  IMPLEMENTATION_READY.md  LIQUIDITY_PHYSICS_FIX_PLAN.md  NEXT.md  NOTE.txt  PAPER.md  PENTAVIEW_RESEARCH.md  PENTAVIEW_TRAINING_AND_REPLAY_GUIDE.md  PENTAVIEW_UI.md  PHASE_3.md  PLAN.md  PLAN_future_option_mbo.md  PRINCIPAL_QUANT_FEATURE_ANALYSIS.md  RAW_DATA_INVENTORY.md  (+46 more)
backend/: .dockerignore  ABLATION_RESULTS.md  BRONZE_SCHEMA.md  CHECKPOINTING.md  DATA_ARCHITECTURE.md  DEEP_VALIDATION_COMPLEX_FEATURES.md  Dockerfile  EPISODE_VECTOR_SCHEMA.md  ES_OPTIONS_VALIDATION.txt  FEATURE_BY_FEATURE.md  FEATURE_VALIDATION_PROGRESS.md  FRONTEND_API.md  HYPEROPT_PLAN.md  LEVEL_RELATIVE_FEATURES_PLAN.md  MARKET_TIDE_DEBUG.md  MEDALLION_WORKFLOW.md  PIPELINE.md  PIPELINE_OPTIMIZATION_ANALYSIS.md  PIPELINE_TASK.md  PIPELINE_VALIDATION_FINDINGS.md  PM_HIGH_TOUCH_OUTCOMES_PLAN.md  QUICKSTART_ES_V1.txt  README.md  REMOVE_LEVEL_ID_TASK.md  RESEARCH.md  RESTORE_DATA_ENG.md  SILVER_SCHEMA.md  STAGE_VALIDATION_ANALYSIS.md  TASK_PLAN.txt  TRANSFORMER.md  V1_FINAL_CALL_CHANGES.md  alembic.ini  audit_results.txt  audit_results_v4.6.txt  audit_results_v4.6_final.txt  check_pref.py  clear_gold.sh  clear_silver.sh  compute_pm_high.py  debug_full.txt  (+43 more)
backend/alembic/: env.py
backend/databases/: build_indices.sh
backend/docs/: DRIVER_SYSTEM_INTEGRATION.md  LEVEL_RELATIVE_FEATURES_DESIGN.md  bar2m_features.txt
backend/logs/: compute_norm_final.out  compute_normalization.out  compute_normalization_v2.out  pipeline_list.out  run_stage_0_1.out  run_stage_0_1_final.out  run_stage_0_1_v2.out  run_stage_0_2_debug.out  stage_00_run.out  stage_01_run.out  stage_02_run.out  stage_03-15_run.out  stage_15-16_fixed.out  stage_16_debug.out  stage_16_decoded.out  stage_16_final.out  stage_16_full_debug.out  stage_16_run.out  stage_16_run_fixed.out  stage_16_run_tz_fixed.out  stage_16_verbose.out  stage_17_debug.out  stage_17_final.out  stage_17_level_decoded.out  stage_17_normalized.out  stage_17_null_fixed.out  stage_17_run.out  stage_17_tz_fixed.out  stage_17_with_norm.out  validate_all_stages_2025-06-05_results.json  validate_stage_00.out  validate_stage_00_2025-12-16.out  validate_stage_00_2025-12-16_results.json  validate_stage_01_2025-12-16.out  validate_stage_01_2025-12-16_results.json  validate_stage_01_2025-12-16_v2.out  validate_stage_01_corrected.out  validate_stage_01_final.out  validate_stage_02_2025-12-16.out  validate_stage_02_2025-12-16_results.json  (+60 more)
backend/scripts/: DOWNLOAD_ES_FUTURES.md  analyze_gex_variance.py  analyze_level_break_drivers.py  analyze_level_specificity.py  analyze_levels.py  analyze_pentaview_edge.py  analyze_signals.py  analyze_time_stratification.py  analyze_vp_signals.py  analyze_warmup.py  audit_equity_mbo_silver.py  audit_equity_option_cmbp1_silver.py  audit_silver_future_mbo.py  audit_silver_stats.py  backfill_bronze_futures.py  backfill_bronze_parallel.py  backfill_sequences.py  batch_download_equities.py  batch_download_equity_options.py  batch_download_futures.py  batch_download_options.py  benchmark_core.py  benchmark_vp_core.py  bootstrap_calibration.py  bootstrap_medallion.py  build_gold_dataset_campaign.py  build_mbo_sample_dbn.py  build_pentaview_level_dataset.py  build_production_indices.py  build_projection_dataset.py  build_reversion_dataset.py  cache_output.py  cache_vp_output.py  check_bronze_start.py  check_flags.py  check_metadata_schema.py  check_numba_compile.py  clean_silver_data.py  clean_unreal_project.py  compute_normalization_stats.py  (+150 more)
demo/: INTEGRATION_STATUS.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh
(+4422 files in other folders)
