[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.41.5",
    "databento>=0.68.1",
    "duckdb>=1.4.3",
    "fastapi[standard]>=0.124.4",
    "mlflow>=3.8.0",
    "nats-py>=2.12.0",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "pandas>=2.3.3",
    "polygon-api-client>=1.16.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "s3fs>=2025.12.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "torch==2.9.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "wandb>=0.23.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
