[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-eventhub>=5.15.1",
    "boto3>=1.41.5",
    "databento>=0.68.1",
    "deltalake>=1.3.2",
    "duckdb>=1.4.3",
    "faiss-cpu>=1.13.2",
    "feast>=0.50.0",
    "fastapi[standard]>=0.124.4",
    "leidenalg>=0.11.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.0",
    "nats-py>=2.12.0",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "polygon-api-client>=1.16.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-igraph>=1.0.0",
    "pytorch-forecasting>=1.5.0",
    "pyyaml>=6.0.3",
    "s3fs>=2025.12.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "tabulate>=0.9.0",
    "torch==2.9.0",
    "transformers>=4.57.3",
    "types-pyyaml>=6.0.12.20250915",
    "uvicorn>=0.34.0",
    "wandb>=0.23.1",
    "websockets>=15.0.1",
    "xgboost>=3.2.0",
]

[tool.uv]
environments = ["sys_platform == 'darwin' and python_version >= '3.12'"]

[tool.pytest.ini_options]
markers = [
    "real_data: requires real .dbn files in lake (may be slow)",
]

[dependency-groups]
dev = [
    "delta-spark>=4.0.1",
    "maturin>=1.7",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
