[project]
name = "pentaview-viewer"
version = "1.0.0"
description = "Real-time Pentaview stream visualization"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sock>=0.7.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

