[package]
name = "vp-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "vp_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }
numpy = "0.22"
dbn = "0.49.0"
zstd = "0.13"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
